[package]
name = "polyjuice"
version = "0.1.0"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
clap = "2.33"
hex = "0.4.2"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
bincode = "1.2.1"
rocksdb = "0.14.0"
failure = "0.1.5"
secp256k1 = { version = "0.17.2", features = ["recovery"] }
lazy_static = "1.4"
ctrlc = { version = "3.1", features = ["termination"] }
jsonrpc-core = "14.0"
jsonrpc-derive = "14.0"
jsonrpc-server-utils = "14.0"
jsonrpc-http-server = "14.0"
ckb-vm = { version = "0.19.1", features = ["asm"] }
numext-fixed-uint = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
sparse-merkle-tree = "0.3"
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-cli", tag = "v0.35.0" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.35.0-rc1" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.35.0-rc1" }
ckb-chain-spec = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.35.0-rc1" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.35.0-rc1" }
# ckb-simple-account-layer = { git = "https://github.com/nervosnetwork/ckb-simple-account-layer", rev = "83f20d9" }
ckb-simple-account-layer = { git = "https://github.com/TheWaWaR/ckb-simple-account-layer.git", rev = "9a062193780f8ec88b7f3555ec744ffaa8b194f8" }
